{
    "name": "InputMaster",
    "maps": [
        {
            "name": "Ship",
            "id": "2cf8e903-e21f-483f-bd15-6ab0d6eaf2fe",
            "actions": [
                {
                    "name": "MovementUp",
                    "type": "Value",
                    "id": "e814d7d4-4fe8-4f39-ab88-c33f83aa033e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MovementDown",
                    "type": "Value",
                    "id": "d703e72e-0232-4265-8712-e91d3bb20e79",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MovementLeft",
                    "type": "Button",
                    "id": "3c2463ac-c8aa-45a3-a492-42a560bc802c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MovementRight",
                    "type": "Button",
                    "id": "f64256d5-98ec-4fa0-bdb8-51d95920f8ea",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Fire",
                    "type": "Button",
                    "id": "d215e9cd-c0e2-44e8-90d7-40392afe7217",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Hold",
                    "type": "Button",
                    "id": "d8f58ad3-3c63-408e-89b4-9ff82e58e87b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c2f77df0-8489-4bec-91be-75d58c005171",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c8aceae2-2892-4cd1-8e33-b43952791173",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4a47139b-3014-476c-9ca2-a2048b940c3f",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "067d5834-682e-4d2e-8b93-ead9ea6284d7",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9ca46ed8-3e7e-4166-9cfe-1a0bf327b5e8",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1ac3bb7d-eda8-4512-b5fc-19f1eb73d371",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a05e88e7-88f3-4ac6-932c-d331e2e76a8c",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c4f988cb-7a41-414d-bf9c-ccce96a7962a",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4837d98b-56af-4f67-be42-6968414342c1",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "74daf7f2-af08-4f58-968c-5fe86d76a16a",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "Hold",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Dialogs",
            "id": "5cd13394-2a35-49d9-985d-d9edf0cca180",
            "actions": [
                {
                    "name": "Escape",
                    "type": "Button",
                    "id": "a0eb482f-af01-4b10-832d-926d90b4a035",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e2e91c53-afc9-4365-b34e-b709b8c5f17d",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Escape",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "CheatCodes",
            "id": "8beaac25-4f18-491f-bbb2-f45c045fd425",
            "actions": [
                {
                    "name": "AddTime",
                    "type": "Button",
                    "id": "df2aa06a-f908-425b-a136-5658dd71249d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Reset",
                    "type": "Button",
                    "id": "dfab5d39-b825-415b-b7e4-4a4bc08806fc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NextLevel",
                    "type": "Button",
                    "id": "ed97b688-9e1f-4c88-a2cb-f220f95bce61",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HealUp",
                    "type": "Button",
                    "id": "b8e0cb4d-c77c-4d62-9376-17e79c2ed582",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "190d3fe7-5331-46e7-afa8-6fe35b27852f",
                    "path": "<Keyboard>/t",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AddTime",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "72e38fe2-75c2-46ed-a7cc-e4148adff3fd",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Reset",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0d01f08f-f284-4ad8-95f4-13ed83e01754",
                    "path": "<Keyboard>/n",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NextLevel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f8cfc906-639c-4a2c-89f3-a440bebb30de",
                    "path": "<Keyboard>/h",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HealUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}